--- a/Ejercicio_a_resolver/archivo.ipynb
+++ b/Ejercicio_a_resolver/archivo.ipynb
@@ -14,8 +14,14 @@
    "outputs": [],
    "source": [
     "import pandas as pnd\n",
-    "import JMPEstadisticas as jmp\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creamos el Data Frame con los datos que analizaremos"
    ]
   },
   {
@@ -23,7 +29,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "observaciones = pnd.DataFrame({'NOTAS':np.array([3,19,10,15,14,12,9,8,11,12,11,12,13,11,14,16])})"
+   ]
   }
  ],
  "metadata": {
