--- a/Ejercicio_a_resolver/MetodosEstadisticos.ipynb
+++ b/Ejercicio_a_resolver/MetodosEstadisticos.ipynb
@@ -17,6 +17,28 @@
     "from math import *\n",
     "import matplotlib.pyplot as plt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MetodosEstadisticos:\n",
+    "\n",
+    "    def __init__(self,numeros):\n",
+    "        self.numeros = numeros\n",
+    "\n",
+    "\n",
+    "    def calculoMediaAritmetica(self):\n",
+    "\n",
+    "        n = self.numeros.count() #contamos la cantidad de numeros a sumar para despues dividir entre este numero\n",
+    "        media = 0 #variable que almacena el valor de la suma de los numeros\n",
+    "        for valor in self.numeros:\n",
+    "            media = media + valor\n",
+    "        media = media / n\n",
+    "        return media"
+   ]
   }
  ],
  "metadata": {
