--- a/Ejercicio_a_resolver/MetodosEstadisticos.ipynb
+++ b/Ejercicio_a_resolver/MetodosEstadisticos.ipynb
@@ -15,9 +15,7 @@
    "source": [
     "from collections import Counter\n",
     "from math import *\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pnd\n",
-    "import numpy as np"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -44,7 +42,29 @@
     "        return moda\n",
     "    def CalculoMediana(self):\n",
     "        mediana = self.numeros.median()\n",
-    "        return mediana\n"
+    "        return mediana\n",
+    "    def CalculoMediana2(self):\n",
+    "        mediana = 0\n",
+    "        lista_numeros = self.numeros.sort_values()\n",
+    "        n = self.lista_numeros.count()\n",
+    "        par = False\n",
+    "        if (n % 2 == 0):\n",
+    "            print(\"La cantidad de observaciones es par.\")\n",
+    "            par = True\n",
+    "\n",
+    "        if par:\n",
+    "            rango = (n / 2)\n",
+    "            print(\"RANGO = \"+str(rango))\n",
+    "            rangoPython = rango-1\n",
+    "            valor1 = lista_numeros[rangoPython]\n",
+    "            valor2 = lista_numeros[rangoPython+1]\n",
+    "            mediana = valor1 +((valor2-valor1)/2)\n",
+    "        else:\n",
+    "            rango = ((n + 1) / 2)\n",
+    "            rangoPython = rango - 1\n",
+    "            mediana = lista_numeros[rangoPython]\n",
+    "\n",
+    "        return [mediana, rango]\n"
    ]
   },
   {
@@ -89,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
