--- a/Ejercicio_a_resolver/archivo.ipynb
+++ b/Ejercicio_a_resolver/archivo.ipynb
@@ -14,6 +14,7 @@
    "outputs": [],
    "source": [
     "import pandas as pnd\n",
+    "import MetodosEstadisticos as mt\n",
     "import numpy as np"
    ]
   },
@@ -30,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "observaciones = pnd.DataFrame({'NOTAS':np.array([3,19,10,15,14,12,9,8,11,12,11,12,13,11,14,16])})"
+    "observaciones = mt.MetodosEstadisticos({'NOTAS':np.array([3,19,10,15,14,12,9,8,11,12,11,12,13,11,14,16])})"
    ]
   }
  ],
@@ -50,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
