--- a/Ejercicio_a_resolver/archivo.ipynb
+++ b/Ejercicio_a_resolver/archivo.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "import pandas as pnd\n",
-    "import MetodosEstadisticos as mt\n",
+    "from . import MetodosEstadisticos as mt\n",
     "import numpy as np"
    ]
   },
