--- a/Ejercicio_a_resolver/archivo.ipynb
+++ b/Ejercicio_a_resolver/archivo.ipynb
@@ -52,13 +52,13 @@
     "            media = media + valor\n",
     "        return media/n\n",
     "\n",
-    "    def CalculoModa(self):\n",
+    "    def calculoModa(self):\n",
     "        moda = Counter(self.numeros)\n",
     "        return moda\n",
-    "    def CalculoMediana(self):\n",
+    "    def calculoMediana(self):\n",
     "        mediana = self.numeros.median()\n",
     "        return mediana\n",
-    "    def CalculoMediana2(self):\n",
+    "    def calculoMediana2(self):\n",
     "        mediana = 0\n",
     "        lista_numeros = self.numeros.sort_values()\n",
     "        n = self.lista_numeros.count()\n",
@@ -79,7 +79,109 @@
     "            rangoPython = rango - 1\n",
     "            mediana = lista_numeros[rangoPython]\n",
     "\n",
-    "        return [mediana, rango]"
+    "        return [mediana, rango]\n",
+    "\n",
+    "    def calculoVarianzaDesviacionTipica(self):\n",
+    "        n = self.numeros.count()\n",
+    "        mediaAritmetica = self.numeros.mean()\n",
+    "        varianza = 0\n",
+    "        c3 = 0\n",
+    "        for valorObservacion in self.numeros:\n",
+    "            x = valorObservacion\n",
+    "            moy = mediaAritmetica\n",
+    "            c1 = valorObservacion - mediaAritmetica\n",
+    "            c2 = c1 * c1\n",
+    "            c3 = c3 + c2\n",
+    "\n",
+    "        varianza = c3 / (n - 1)\n",
+    "\n",
+    "        desviacionTipica = sqrt(varianza)\n",
+    "\n",
+    "        return ([varianza, desviacionTipica])\n",
+    "    def analisisCaracteristica(self):\n",
+    "\n",
+    "        print(\"-----------------------------------------\")\n",
+    "        print(\"      MEDIDA DE TENDENCIA CENTRAL        \")\n",
+    "        print(\"-----------------------------------------\\n\")\n",
+    "\n",
+    "        print(\"-- CANTIDAD DE OBSERVACIONES --\")\n",
+    "        # -Cantidad de observaciones\n",
+    "        n = self.numeros.count()\n",
+    "        print(\"Cantidad de observaciones = \" + str(n))\n",
+    "\n",
+    "        print (\"\\n-- MIN --\")\n",
+    "        valoresOrdenados = self.numeros.sort_values()\n",
+    "        valoresOrdenados = valoresOrdenados.reset_index(drop=True)\n",
+    "        print(\"Valor mínimo: \"+str(valoresOrdenados[0]))\n",
+    "\n",
+    "        print (\"\\n-- MAX --\")\n",
+    "        valoresOrdenados = self.numeros.sort_values()\n",
+    "        valoresOrdenados = valoresOrdenados.reset_index(drop=True)\n",
+    "        print(\"Valor máximo: \" + str(valoresOrdenados[len(valoresOrdenados)-1]))\n",
+    "\n",
+    "        # -Media artimética:\n",
+    "        print(\"\\n-- MEDIA --\")\n",
+    "        media = self.calculoMediaAritmetica()\n",
+    "        print(\"Media aritmética calculada = \" + str(media))\n",
+    "        print(\"> Observaciones: Si todas las observaciones tuvieran el mismo valor (reparto equitativo), este sería \" + str(media))\n",
+    "\n",
+    "        # -Media aritmética:\n",
+    "        print(\"\\n-- MEDIANA --\")\n",
+    "        mediana = self.calculoMediana()\n",
+    "        print(\"Mediana calculada = \" + str(mediana[0]))\n",
+    "        print(\"> Observaciones: El valor que se encuentra en el punto medio de las observaciones es:\" + str(mediana[0]))\n",
+    "        print(\"El reparto es: \" + str(mediana[1]) + \" valores en cada lado de la mediana\")\n",
+    "\n",
+    "        # -Moda\n",
+    "        print(\"\\n-- MODA --\")\n",
+    "        moda = self.calculoModa()\n",
+    "        print(moda)\n",
+    "        print(\"> Observacions: La moda permite determinar los valores observados con más frecuencia\")\n",
+    "\n",
+    "\n",
+    "        print(\"\\n\\n-----------------------------------------\")\n",
+    "        print(\"      MEDIDA DE DISPERSION        \")\n",
+    "        print(\"-----------------------------------------\\n\")\n",
+    "        print(\"-- RANGO --\")\n",
+    "        print (\"Rango de la serie = \"+str(valoresOrdenados[len(valoresOrdenados)-1]-valoresOrdenados[0]))\n",
+    "        varianzaDesviacionTipica = self.calculoVarianzaDesviacionTipica()\n",
+    "\n",
+    "        print(\"\\n-- VARIANZA --\")\n",
+    "        print(\"Varianza calculada = \" + str(varianzaDesviacionTipica[0]))\n",
+    "\n",
+    "        print(\"\\n-- DESVIACION TIPICA --\")\n",
+    "        print(\"Desviación típica calculada = \" + str(varianzaDesviacionTipica[1]))\n",
+    "        desviacionTipica = varianzaDesviacionTipica[1]\n",
+    "        print(\"68 % de los valores de las observaciones se sitúan entre \" + str(media - desviacionTipica) + \" y \" + str(\n",
+    "            media + desviacionTipica))\n",
+    "        print(\"95 % de los valores de las observaciones se sitúan entre \" + str(media - (desviacionTipica * 2)) + \" y \" + str(\n",
+    "            media + (desviacionTipica * 2)))\n",
+    "        print(\"99 % de los valores de las observaciones se sitúan entre \" + str(media - (desviacionTipica * 3)) + \" y \" + str(\n",
+    "            media + (desviacionTipica * 3)))\n",
+    "\n",
+    "        print(\"\\n\\n-----------------------------------------\")\n",
+    "        print(\"      CUARTILES        \")\n",
+    "        print(\"-----------------------------------------\\n\")\n",
+    "        cuartiles = self.calculoDelosCuartiles(mediana[0],mediana[1])\n",
+    "        print(\"25 % de las observaciones tienen un valor inferior a \" + str(cuartiles[0]))\n",
+    "        print(\"50 % de las observaciones tienen un valor inferior a \" + str(cuartiles[1]))\n",
+    "        print(\"75 % de las observaciones tienen un valor inferior a \" + str(cuartiles[2]))\n",
+    "\n",
+    "\n",
+    "        print(\"\\n\\n-----------------------------------------\")\n",
+    "        print(\"      DETECCION VALORES ABERRANTES        \")\n",
+    "        print(\"-----------------------------------------\\n\")\n",
+    "        print(\"> Criterios de Tukey\")\n",
+    "        valoresAberrantes = self.criterioDeTukey(cuartiles[0], cuartiles[2])\n",
+    "        print(\"Cantidad de valores aberrantes: \" + str(len(valoresAberrantes)))\n",
+    "        print(\"Valores:\" + str(valoresAberrantes))\n",
+    "\n",
+    "\n",
+    "        print(\"\\n\\n-----------------------------------------\")\n",
+    "        print(\"      VISUALIZACION        \")\n",
+    "        print(\"-----------------------------------------\\n\")\n",
+    "        print(\"Generación de las gráficas...\")\n",
+    "        self.visualizacion(media,mediana[0],cuartiles[0],cuartiles[1],cuartiles[2])"
    ]
   },
   {
@@ -107,7 +209,7 @@
     }
    ],
    "source": [
-    "observaciones = mt.MetodosEstadisticos({'NOTAS':np.array([3,19,10,15,14,12,9,8,11,12,11,12,13,11,14,16])})"
+    "observaciones = MetodosEstadisticos({'NOTAS':np.array([3,19,10,15,14,12,9,8,11,12,11,12,13,11,14,16])})"
    ]
   },
   {
