--- a/Ejercicio_a_resolver/archivo.ipynb
+++ b/Ejercicio_a_resolver/archivo.ipynb
@@ -98,6 +98,62 @@
     "        desviacionTipica = sqrt(varianza)\n",
     "\n",
     "        return ([varianza, desviacionTipica])\n",
+    "    \n",
+    "    \n",
+    "    def calculoDelosCuartiles(self,mediana,rangoMediana):\n",
+    "        n = self.numeros.count()\n",
+    "        sort_caracteristica = self.numeros.sort_values()\n",
+    "        sort_caracteristica = sort_caracteristica.reset_index(drop=True)\n",
+    "        q1 = 0\n",
+    "        q2 = mediana\n",
+    "        q3 = 0\n",
+    "\n",
+    "        #Cálculo Q1\n",
+    "        restoDivision = rangoMediana%2\n",
+    "        if (restoDivision != 0):\n",
+    "            q1 = sort_caracteristica[((rangoMediana/2)+1)-1]\n",
+    "        else:\n",
+    "            valorMin = sort_caracteristica[((rangoMediana/2)-1)]\n",
+    "            valorMax = sort_caracteristica[(rangoMediana/2)]\n",
+    "            q1 = (valorMin + ((valorMax - valorMin) / 2) + valorMax) / 2\n",
+    "\n",
+    "        # Cálculo Q3\n",
+    "        nbdatos = len(sort_caracteristica)+1\n",
+    "        nbDatosDesdeMediana = nbdatos - rangoMediana\n",
+    "        restoDivision = nbDatosDesdeMediana % 2\n",
+    "        if (restoDivision != 0):\n",
+    "            q3 = sort_caracteristica[(rangoMediana+ceil(nbDatosDesdeMediana/2))-1]\n",
+    "        else:\n",
+    "            valorMinQ3 = sort_caracteristica[(rangoMediana+(nbDatosDesdeMediana/2))-1]\n",
+    "            valorMaxQ3 = sort_caracteristica[(rangoMediana+(nbDatosDesdeMediana/2))]\n",
+    "            q3 = (valorMin + ((valorMax - valorMin) / 2) + valorMax) / 2\n",
+    "\n",
+    "\n",
+    "        return ([q1, q2, q3])\n",
+    "\n",
+    "\n",
+    "    def criterioDeTukey(self, primerCuartil, tercerCuartil):\n",
+    "\n",
+    "        valoresAberrantesInferiores = []\n",
+    "        valoresAberrantesSuperiores = []\n",
+    "        caracteristica = self.caracteristica.sort_values()\n",
+    "        intercuartil = tercerCuartil - primerCuartil\n",
+    "        print(\"Inter-cuartil = \"+str(intercuartil))\n",
+    "        limiteInferior = primerCuartil - (1.5 * intercuartil)\n",
+    "        limiteSuperior = tercerCuartil + (1.5 * intercuartil)\n",
+    "\n",
+    "        for valorObservacion in caracteristica:\n",
+    "            if valorObservacion < limiteInferior:\n",
+    "                valoresAberrantesInferiores.append(valorObservacion)\n",
+    "\n",
+    "            if valorObservacion > limiteSuperior:\n",
+    "                valoresAberrantesSuperiores.append(valorObservacion)\n",
+    "\n",
+    "        valoresAberrantes = valoresAberrantesInferiores + valoresAberrantesSuperiores\n",
+    "\n",
+    "        return (valoresAberrantes)\n",
+    "\n",
+    "\n",
     "    def analisisCaracteristica(self):\n",
     "\n",
     "        print(\"-----------------------------------------\")\n",
