--- a/Ejercicio_a_resolver/archivo.ipynb
+++ b/Ejercicio_a_resolver/archivo.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,24 +37,24 @@
     "    def calculoMediaAritmetica(self):\n",
     "        n = self.numeros.count() #contamos la cantidad de numeros a sumar para despues dividir entre este numero\n",
     "        media = 0 #variable que almacena el valor de la suma de los numeros\n",
-    "        for valor in self.numeros:\n",
+    "        for valor in self.numeros:     \n",
     "            media = media + valor\n",
     "        return media/n\n",
     "\n",
-    "    def calculoModa(self):\n",
+    "    def calculoModa(self):     # Creamos la función para calcular la moda\n",
     "        moda = Counter(self.numeros)\n",
     "        return moda\n",
-    "    def calculoMediana2(self):\n",
+    "    def calculoMediana2(self):   # Creamos la función para calcular la mediana2\n",
     "        mediana = str(self.numeros.median())\n",
     "        return mediana\n",
-    "    def calculoMediana(self):\n",
+    "    def calculoMediana(self):    # Creamos la función para calcular la mediana\n",
     "        mediana = 0\n",
     "        lista_numeros = self.numeros.sort_values()\n",
     "        n = self.numeros.count()\n",
     "        par = False\n",
-    "        if (n % 2 == 0):\n",
+    "        if (n % 2 == 0):       # Comprobamos si la cantidad de observaciones es par o impar\n",
     "            print(\"La cantidad de observaciones es par.\")\n",
-    "            par = True\n",
+    "            par = True       # Si es par, la variable par se vuelve True\n",
     "\n",
     "        if par:\n",
     "            rango = (n / 2)\n",
