--- a/Ejercicio_a_resolver/archivo.ipynb
+++ b/Ejercicio_a_resolver/archivo.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
     "        return ([q1, q2, q3])\n",
     "\n",
     "\n",
-    "    def criterioDeTukey(self, primerCuartil, tercerCuartil):\n",
+    "    def criterioDeTukey(self, primerCuartil, tercerCuartil):     # Creamos la función para calcular el criterio de Tukey\n",
     "\n",
     "        valoresAberrantesInferiores = []\n",
     "        valoresAberrantesSuperiores = []\n",
@@ -141,12 +141,12 @@
     "        valoresAberrantes = valoresAberrantesInferiores + valoresAberrantesSuperiores\n",
     "\n",
     "        return (valoresAberrantes)\n",
-    "    def visualizacion(self,media,mediana,cuartil_1,cuartil_2,cuartil_3):\n",
+    "    def visualizacion(self,media,mediana,cuartil_1,cuartil_2,cuartil_3):    # Creamos la función para visualizar los datos\n",
     "\n",
-    "        plt.subplot(2, 2, 1)\n",
-    "        plt.hist(self.numeros)\n",
-    "        plt.title(\"Histograma y media\")\n",
-    "        plt.axvline(media, color='red', linestyle='dashed', linewidth=1,label = str(media))\n",
+    "        plt.subplot(2, 2, 1)     # Creamos el histograma y la media\n",
+    "        plt.hist(self.numeros)   # Creamos el histograma\n",
+    "        plt.title(\"Histograma y media\")    # Ponemos el título al histograma\n",
+    "        plt.axvline(media, color='red', linestyle='dashed', linewidth=1,label = str(media))  # Creamos la línea de la media\n",
     "        plt.legend(loc='upper right')\n",
     "\n",
     "        plt.subplot(2, 2, 2)\n",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -371,21 +371,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'calculoDelosCuartiles' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_12788\\363423193.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcuartiles\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcalculoDelosCuartiles\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmediana\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmediana\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'calculoDelosCuartiles' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
