--- a/Ejercicio_a_resolver/archivo.ipynb
+++ b/Ejercicio_a_resolver/archivo.ipynb
@@ -56,7 +56,7 @@
     "            print(\"La cantidad de observaciones es par.\")\n",
     "            par = True       # Si es par, la variable par se vuelve True\n",
     "\n",
-    "        if par:\n",
+    "        if par: # si es par, ocurrira lo siguiente que sirve para calcular la mediana\n",
     "            rango = (n / 2)\n",
     "            print(\"RANGO = \"+str(rango))\n",
     "            rangoPython = rango-1\n",
@@ -64,11 +64,11 @@
     "            valor2 = lista_numeros[rangoPython+1]\n",
     "            mediana = valor1 +((valor2-valor1)/2)\n",
     "        else:\n",
-    "            rango = ((n + 1) / 2)\n",
-    "            rangoPython = rango - 1\n",
-    "            mediana = lista_numeros[rangoPython]\n",
+    "            rango = ((n + 1) / 2) #esta es la formula para el rango\n",
+    "            rangoPython = rango - 1 #esta es la formula para el rango en python\n",
+    "            mediana = lista_numeros[rangoPython] #creamos una variable que almacena el valor de la mediana llamda mediana\n",
     "\n",
-    "        return [mediana, rango]\n",
+    "        return [mediana, rango] # nos devuelve la mediana y el rango\n",
     "\n",
     "    def calculoVarianzaDesviacionTipica(self):\n",
     "        n = self.numeros.count()\n",
@@ -400,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
