--- a/Ejercicio_a_resolver/archivo.ipynb
+++ b/Ejercicio_a_resolver/archivo.ipynb
@@ -70,10 +70,10 @@
     "\n",
     "        return [mediana, rango] # nos devuelve la mediana y el rango\n",
     "\n",
-    "    def calculoVarianzaDesviacionTipica(self):\n",
-    "        n = self.numeros.count()\n",
-    "        mediaAritmetica = self.numeros.mean()\n",
-    "        varianza = 0\n",
+    "    def calculoVarianzaDesviacionTipica(self): # creamos una funcion para calcular la varianza y la desv tipica\n",
+    "        n = self.numeros.count() # es la cantidad de numeros de una lista\n",
+    "        mediaAritmetica = self.numeros.mean() # damos valor a la medua \n",
+    "        varianza = 0 \n",
     "        c3 = 0\n",
     "        for valorObservacion in self.numeros:\n",
     "            x = valorObservacion\n",
