--- a/Ejercicio_a_resolver/archivo.ipynb
+++ b/Ejercicio_a_resolver/archivo.ipynb
@@ -76,30 +76,30 @@
     "        varianza = 0 \n",
     "        c3 = 0\n",
     "        for valorObservacion in self.numeros:\n",
-    "            x = valorObservacion\n",
-    "            moy = mediaAritmetica\n",
+    "            x = valorObservacion \n",
+    "            moy = mediaAritmetica #asignamos moy a la media aritmetica\n",
     "            c1 = valorObservacion - mediaAritmetica\n",
     "            c2 = c1 * c1\n",
     "            c3 = c3 + c2\n",
     "\n",
-    "        varianza = c3 / (n - 1)\n",
+    "        varianza = c3 / (n - 1) # aqui se muestra la formula para calcular la varianza \n",
     "\n",
-    "        desviacionTipica = sqrt(varianza)\n",
+    "        desviacionTipica = sqrt(varianza) # para calcular la desviacion tipica debemos calcular la raiz cuadrada de la varianza\n",
     "\n",
-    "        return ([varianza, desviacionTipica])\n",
+    "        return ([varianza, desviacionTipica]) # nos devuelve la varianza y la desv. tipica\n",
     "    \n",
     "    \n",
-    "    def calculoDelosCuartiles(self,mediana,rangoMediana):\n",
-    "        n = self.numeros.count()\n",
-    "        sort_caracteristica = self.numeros.sort_values()\n",
-    "        sort_caracteristica = sort_caracteristica.reset_index(drop=True)\n",
-    "        q1 = 0\n",
-    "        q2 = mediana\n",
-    "        q3 = 0\n",
+    "    def calculoDelosCuartiles(self,mediana,rangoMediana): #en esta linea, creamos la funcion para el calculo de los cuartiles, que es el 25, º50 y 75\n",
+    "        n = self.numeros.count() #como ya hemos mencionado antes son los numeros de la lista\n",
+    "        sort_caracteristica = self.numeros.sort_values() #este codigo va a ordenar los valores de la caracteristica\n",
+    "        sort_caracteristica = sort_caracteristica.reset_index(drop=True) #reseteamos el indice de la caracteristica\n",
+    "        q1 = 0 #asignamos un valos inicial al prier cuartil\n",
+    "        q2 = mediana #decimos que el q2 es la mediana, que ya esta calculada\n",
+    "        q3 = 0 # al igual que dos lineas arriba, asignamos el valor inicial al tercer cuartil\n",
     "\n",
     "        #Cálculo Q1\n",
-    "        restoDivision = rangoMediana%2\n",
-    "        if (restoDivision != 0):\n",
+    "        restoDivision = rangoMediana%2 # calculamos el resto de la division del rango de la mediana entre 2\n",
+    "        if (restoDivision != 0): # hacemos un codigo para cuando el resto de la division sea distinto de 0\n",
     "            q1 = sort_caracteristica[((rangoMediana/2)+1)-1]\n",
     "        else:\n",
     "            valorMin = sort_caracteristica[((rangoMediana/2)-1)]\n",
@@ -172,7 +172,7 @@
     "    def analisisCaracteristica(self):\n",
     "\n",
     "        print(\"-----------------------------------------\")\n",
-    "        print(\"      MEDIDA DE TENDENCIA CENTRAL        \")\n",
+    "        print(\"      MEDIDA DE TENDENCIA CENTRAL        \") \n",
     "        print(\"-----------------------------------------\\n\")\n",
     "\n",
     "        print(\"-- CANTIDAD DE OBSERVACIONES --\")\n",
